tests/NormalTests/paczka1/small_fuzzy/41107880.err
Error in line 5: FHbtSJ S98 202,13
Error in line 2: A833 S98 72,6
Error in line 4: FHbtSJ S98 43,6
Error in line 9: A833 A334 74,3
